--- a/readme
+++ b/readme
@@ -12,6 +12,12 @@ Step2::::::::
 Creation of s3 bucket 
 bucket name - vijay1999gawate
 
+Step3::::::::
+Lunch ubuntu instance open all traffic 
+first edit config.py file add here all the parameters that we set while launching rds like endpoint, uname and pw
+now, ssh into instance and clone the repo (aws-live)
+
+
 
 sudo apt-get update
 # For Sql-client
